target/classes/META-INF/fabric8/openshift/demo-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: d292e5533fcd992646d75264dfbdabcb642bb3a9
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=demo&var-version=0.0.1-SNAPSHOT
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/demo
  labels:
    app: demo
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: demo
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: demo
    provider: fabric8
    group: com.example
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: d292e5533fcd992646d75264dfbdabcb642bb3a9
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=demo&var-version=0.0.1-SNAPSHOT
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/demo
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/git-branch: master
        fabric8.io/scm-tag: HEAD
      labels:
        app: demo
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: com.example
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: example/demo:snapshot-180223-095824-0411
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
