target/classes/META-INF/fabric8/openshift/demo-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: d292e5533fcd992646d75264dfbdabcb642bb3a9
    prometheus.io/port: "9779"
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/demo
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    fabric8.io/scm-tag: HEAD
  labels:
    expose: "true"
    app: demo
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo
    provider: fabric8
    group: com.example
