target/classes/META-INF/fabric8/openshift/demo-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: demo
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: demo
